refactor: spacelist리팩터링